--- a/rs/templates/landing_page.html
+++ b/rs/templates/landing_page.html
@@ -54,8 +54,7 @@
 
                 <br>
                 {% trans "Do you want to look around before registering?" %}<br>
-                <a id="id-enter_guest" class="ui-state-default cl-enter_guest" href="{% url search_gen %}?query_order=unique_last_login"
-                   rel="address:{% url search_gen %}?query_order=unique_last_login">
+                <a id="id-enter_guest" class="ui-state-default cl-enter_guest" href="{% url search_gen %}?query_order=unique_last_login">
                     {% trans "Enter with a guest account" %}
                 </a>
                 <br><br>
