--- a/rs/templates/login_helpers/login.html
+++ b/rs/templates/login_helpers/login.html
@@ -54,8 +54,8 @@
     </div>
     </form>
 
-
-     <div id="id-forgot-password" style="display:none;"><div  class="cl-right-text" >
+    <br><br>
+     <div id="id-forgot-password" ><div  class="cl-right-text" >
         <a class="cl-dialog_anchor" href="{% url reset_password %}">
             {% trans "Have you forgotten your password?" %}
         </a>
