Re-formatted the login/registration popup

--- a/rs/templates/common_helpers/logo_banner.html
+++ b/rs/templates/common_helpers/logo_banner.html
@@ -86,7 +86,7 @@
     <script type="text/javascript">
 
         function show_default_registration_and_login_popup() {
-            show_registration_and_login("{% trans 'Register for a new <strong>free account</strong> or log into your previously registered account below.'%}");
+            show_registration_and_login("{% trans 'Register for a new <strong>free account</strong> below.'%}");
         }
 
         // Javascript that will pop-up registration/login when the user clicks on the register/login link
