Fixed autofocus problem on login inputs

--- a/rs/templates/login_helpers/login.html
+++ b/rs/templates/login_helpers/login.html
@@ -34,7 +34,8 @@
 
             <div class="cl-horizontal-bar-sub-div cl-div-horizontal-bar-input-field">
 
-
+                    <!-- dummy input to take the autofocus away from the username input -->
+                    <input type="hidden" autofocus="autofocus" />
 
                     <input type="text"
                        class="defaultText cl-gray-letters-text-prompt cl-nick-textinput-width-px cl-textinput-font-size"
