Added admin login functionality to the popup menu. Removed references to old landing page code. Change variable name to "show_registration_login_popup" from "show_enter_login_popup" (which was an incorrect naming description)

--- a/rs/templates/main_container.html
+++ b/rs/templates/main_container.html
@@ -156,7 +156,7 @@ $(document).ready(function() {
         // Google Analystics tracking code - "_trackEvent" is the pageview event,
         _gaq.push(['_trackPageview']);
 
-        {% if general_information_data_fields.show_enter_login_popup %}
+        {% if general_information_data_fields.show_registration_login_popup %}
             $(document).ready(function() {
                 show_default_registration_and_login_popup();
             });
