Added some error handling if the user is unable to open the register/enter dialog box.

--- a/rs/templates/user_main_helpers/translation_helper.html
+++ b/rs/templates/user_main_helpers/translation_helper.html
@@ -95,3 +95,6 @@
     {% trans "Group members" %}
 </div>
 
+<div id="id-unknown-error-reload-page" style="display:none;">
+    {% trans 'Unknown error - Please reload the page and try again' %}
+</div>
