Left-align registration submit button.

--- a/rs/templates/login_helpers/registration.html
+++ b/rs/templates/login_helpers/registration.html
@@ -33,7 +33,7 @@
                 {{ html_for_signup|safe }}
                 <tr>
                     <td></td>
-                    <td><input id="id-submit-signup-button" type="submit" value='{% trans " Register me" %}!'>
+                    <td class="cl-td-left-align"><input id="id-submit-signup-button" type="submit" value='{% trans " Register me" %}!'>
                     </td>
                 </tr>
                 <tr><td>&nbsp;</td></tr>
