--- a/rs/templates/main_container.html
+++ b/rs/templates/main_container.html
@@ -158,7 +158,9 @@ $(document).ready(function() {
 
         {% if general_information_data_fields.show_registration_login_popup %}
             $(document).ready(function() {
-                show_default_registration_and_login_popup();
+                var message = "{{ general_information_data_fields.message_for_client }}";
+                var activate_account_passed_in_username = "{{ general_information_data_fields.activate_account_passed_in_username }}";
+                show_default_registration_and_login_popup(message, activate_account_passed_in_username);
             });
         {% endif %}
 
