--- a/rs/templates/user_main_helpers/menubar.html
+++ b/rs/templates/user_main_helpers/menubar.html
@@ -249,14 +249,14 @@ $(document).ready(function() {
 });
 
 
-function show_default_registration_and_login_popup() {
-    show_registration_and_login("{% trans 'Register for a new <strong>free account</strong> below.'%}");
+function show_default_registration_and_login_popup(message, optional_passed_in_username) {
+    show_registration_and_login(message, optional_passed_in_username);
 }
 
 // Javascript that will pop-up registration/login when the user clicks on the register/login link
 $(document).ready(function() {
     $('.cl-register-enter-href').click(function(){
-        show_default_registration_and_login_popup();
+        show_default_registration_and_login_popup("{% trans 'Register for a new <strong>free account</strong> below.'%}");
         return false; // prevent default
     })
 });
