--- a/rs/templates/main_container.html
+++ b/rs/templates/main_container.html
@@ -148,7 +148,9 @@ $(document).ready(function() {
         
     <div class="grid_12 cl-height_100px" id="id-height_chatbox_override"><br></div><!-- extra space so that footer is not covered by chatboxes -->
 
-        
+    <!-- div for containing the "spinner" that will be shown when loading is occurring -->
+    <div id="id-show-loading-spinner" style="display:none;"></div>
+
     {% include "user_main_helpers/presence_and_chat.html" %}
 
 
