--- a/client/app/styles/user_main.css
+++ b/client/app/styles/user_main.css
@@ -152,7 +152,7 @@ td.cl-photo-td-img
 	vertical-align: middle;
 	text-align: center;
     border: 2px solid #777777;
-    background: url(../img/med_photo_bg.png) repeat-x;
+    background: url(../images/med_photo_bg.png) repeat-x;
 }
 
 td#id-contact-table
@@ -176,7 +176,7 @@ td.cl-photo-td-private-img
 	vertical-align: middle;
 	text-align: center;
     border: 2px solid #88167E;
-    background: url(../img/med_photo_bg.png) center repeat-x;
+    background: url(../images/med_photo_bg.png) center repeat-x;
 }
 
 
@@ -264,8 +264,8 @@ td.cl-profile-photo-td-img
 	vertical-align: middle;
 	text-align: center;
     border: 2px solid #777777;
-    background: url(../img/med_photo_bg.png) center repeat-x;
-	/*background: url(../img/ProfilePhotoBackground.png) center no-repeat;*/
+    background: url(../images/med_photo_bg.png) center repeat-x;
+	/*background: url(../images/ProfilePhotoBackground.png) center no-repeat;*/
 }
 
 .cl-side-bar a { text-decoration: none; color: red; }
@@ -436,12 +436,12 @@ table.cl-mail-icon-table-120px
 }
 
 .cl-mail_seperator {
-	background: url(../img/mail_seperator.png) top center repeat-x;
+	background: url(../images/mail_seperator.png) top center repeat-x;
 }
 
 .cl-search_seperator {
 	height: 10px;
-	background: url(../img/mail_seperator.png) top center repeat-x;
+	background: url(../images/mail_seperator.png) top center repeat-x;
 }
 
 
@@ -464,7 +464,7 @@ div#id-show-loading-spinner
     position: fixed;
     top: 50%;
     left: 50%;
-    background:url(../img/large-ajax-loader.gif) no-repeat center;
+    background:url(../images/large-ajax-loader.gif) no-repeat center;
     text-align:center;
     padding:10px;
     border:0px;
@@ -630,16 +630,16 @@ td.cl-registration-big-prompt-td {
     padding: 0 7px 0 7px;
 }
 .cl-1-green_dot {
-    background: url(../img/1-green_dot_10px_10px.png) center center no-repeat;
+    background: url(../images/1-green_dot_10px_10px.png) center center no-repeat;
 }
 .cl-2-yellow_dot {
-    background: url(../img/2-yellow_dot_10px_10px.png) center center no-repeat;
+    background: url(../images/2-yellow_dot_10px_10px.png) center center no-repeat;
 }
 .cl-3-red_dot {
-    background: url(../img/3-red_dot_10px_10px.png) center center no-repeat;
+    background: url(../images/3-red_dot_10px_10px.png) center center no-repeat;
 }
 .cl-4-black_dot {
-    background: url(../img/4-black_dot_10px_10px.png) center center no-repeat;
+    background: url(../images/4-black_dot_10px_10px.png) center center no-repeat;
 }
 
 a.cl-dialog_anchor {text-decoration: underline; color:#000 ; outline: none; font-weight: bold; } /* #B857AB close to purple */
