--- a/client/app/styles/jquery.fancybox-2.1.5.css
+++ b/client/app/styles/jquery.fancybox-2.1.5.css
@@ -114,7 +114,7 @@
 	height: 100%;
 	cursor: pointer;
 	text-decoration: none;
-	background: transparent url('blank.gif'); /* helps IE */
+	background: transparent url('jquery-fancybox-2.1.5-images/blank.gif'); /* helps IE */
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	z-index: 8040;
 }
