Moved payment options out of an iframe into normal html. Also, hide the payment option dialog once the user has selected a payment.

--- a/client/app/styles/user_main.css
+++ b/client/app/styles/user_main.css
@@ -457,7 +457,7 @@ table.cl-pay-instructions td {
 
 
 
-div#id-show-loading-spinner, div.cl-show-loading-spinner
+div#id-show-loading-spinner
 {
     width:100px;
     height: 100px;
