Updated rules for uploading photos. Also, re-write terms and conditions to include all photo rules.

--- a/client/app/styles/site_common.css
+++ b/client/app/styles/site_common.css
@@ -468,6 +468,10 @@ table.cl-float-right {
     font-size: 8pt;
 }
 
+.cl-margin-below {
+    margin-bottom: 15px;
+}
+
 li.cl-indent {
     margin-left: 25px;
 }
